fix(table): weird artifact s on vertical scrollbar thumb

--- a/src/components/GameTable/GameTable.module.css
+++ b/src/components/GameTable/GameTable.module.css
@@ -1,3 +1,7 @@
 .gameTableContainer {
   box-shadow: 0 0 1.25rem rgba(0, 0, 0, 0.1);
 }
+
+.gameTableScrollbar {
+  color: transparent;
+}
